# EigenLinearSolvers

./: CMakeLists.txt  EigenLinearSolversConfig.cmake.in  LICENSE  README.md
.github/workflows/: ci.yml
scenes/: Cylinder_EigenSimplicialLDLT.scn  FEMBAR_EigenConjugateGradient.scn  FEMBAR_EigenSimplicialLDLT.scn  FEMBAR_EigenSimplicialLLT.scn  FEMBAR_EigenSparseLU.scn
src/EigenLinearSolvers/: EigenConjugateGradient.h  EigenConjugateGradient[CRS].cpp  EigenConjugateGradient[CRS].h  EigenConjugateGradient[CRS].inl  EigenConjugateGradient[Eigen].cpp  EigenConjugateGradient[Eigen].h  EigenConjugateGradient[Eigen].inl  EigenDirectSparseSolver.h  EigenDirectSparseSolver[CRS].h  EigenDirectSparseSolver[CRS].inl  EigenSimplicialLDLT.h  EigenSimplicialLDLT[CRS].cpp  EigenSimplicialLDLT[CRS].h  EigenSimplicialLDLT[CRS].inl  EigenSimplicialLDLT[Eigen].cpp  EigenSimplicialLDLT[Eigen].h  EigenSimplicialLDLT[Eigen].inl  EigenSimplicialLLT.h  EigenSimplicialLLT[CRS].cpp  EigenSimplicialLLT[CRS].h  EigenSparseLU.h  EigenSparseLU[CRS].cpp  EigenSparseLU[CRS].h  EigenSparseQR.h  EigenSparseQR[CRS].cpp  EigenSparseQR[CRS].h  FindMetis.h  SimplicialLDLTTraits.h  SimplicialLLTTraits.h  SparseLUTraits.h  SparseQRTraits.h  config.h.in  init.cpp
